--- a/MXB105 Lecture Notes.tex
+++ b/MXB105 Lecture Notes.tex
@@ -1,3 +1,4 @@
+%!TEX program = xelatex
 \documentclass{article}
 \usepackage{template}
 
@@ -45,6 +46,7 @@
     modifier={by-nc-sa},
     version={4.0},
     imagewidth={5em},
+    hyphenation={raggedright}
 ]{doclicense}
 
 \date{}
@@ -90,8 +92,8 @@ Let $f(x)$ be a function, and $a\in\mathbb{R}$ be a constant.
             \sqrt{x} & \displaystyle \frac{1}{2\sqrt{x}} \\
             a^x & \ln{\left( a \right)} a^x \\
             \e^x & \e^x \\
-            \log_a{x}, \: a\in \mathbb{R}\backslash\left\{ 0 \right\} & \displaystyle \frac{1}{a\ln{x}} \\
-            \ln{x} & \displaystyle \frac{1}{x} \\
+            \log_a{x}, \: a\in \mathbb{R}\backslash\left\{ 0 \right\} & \displaystyle \frac{1}{a\ln{x}} \\[8pt]
+            \ln{x} & \displaystyle \frac{1}{x} \\[5pt]
         \bottomrule
     \end{tabular}
     \begin{tabular}{>{$}c<{$} | >{$}c<{$}}
@@ -100,10 +102,10 @@ Let $f(x)$ be a function, and $a\in\mathbb{R}$ be a constant.
         \midrule
             a & 0 \\
             x & 1 \\
-            a_1 u(x) \pm a_2 v(x) & \displaystyle a_1\dv{u}{x} \pm a_2\dv{v}{x} \\
-            u(x)v(x) & \displaystyle \dv{u}{x}v + u\dv{v}{x} \\
-            \displaystyle \frac{u(x)}{v(x)} & \displaystyle \frac{\dv{u}{x}v - u\dv{v}{x}}{{v(x)}^2} \\
-            u\bigl( v\left( x \right) \bigr) & \displaystyle \dv{u}{v}\dv{v}{x} \\
+            a_1 u(x) \pm a_2 v(x) & \displaystyle a_1\dv{u}{x} \pm a_2\dv{v}{x} \\[8pt]
+            u(x)v(x) & \displaystyle \dv{u}{x}v + u\dv{v}{x} \\[10pt]
+            \displaystyle \frac{u(x)}{v(x)} & \displaystyle \frac{\dv{u}{x}v - u\dv{v}{x}}{{v(x)}^2} \\[8pt]
+            u\bigl( v\left( x \right) \bigr) & \displaystyle \dv{u}{v}\dv{v}{x} \\[5pt]
         \bottomrule
     \end{tabular}
 \end{table}
@@ -119,15 +121,26 @@ Let $f(x)$ be a function, and $a\in\mathbb{R}$ be a constant.
             \tan{\left( ax \right)} &  a\sec^2{\left( ax \right)} \\
             \cot{\left( ax \right)} & -a\csc^2{\left( ax \right)} \\
             \sec{\left( ax \right)} &  a\sec{\left( ax \right)}\tan{\left( ax \right)} \\
-            \csc{\left( ax \right)} & -a\csc{\left( ax \right)}\cot{\left( ax \right)} \\
-            \arcsin{\left( ax \right)} & \displaystyle  \frac{a}{\sqrt{1-a^2x^2}} \\
-            \arccos{\left( ax \right)} & \displaystyle -\frac{a}{\sqrt{1-a^2x^2}} \\
-            \arctan{\left( ax \right)} & \displaystyle  \frac{a}{1+a^2x^2} \\
-            \arccot{\left( ax \right)} & \displaystyle -\frac{a}{1+a^2x^2} \\
-            \arcsec{\left( ax \right)} & \displaystyle  \frac{1}{x\sqrt{a^2x^2 - 1}} \\
-            \arccsc{\left( ax \right)} & \displaystyle -\frac{1}{x\sqrt{a^2x^2 - 1}} \\
+            \csc{\left( ax \right)} & -a\csc{\left( ax \right)}\cot{\left( ax \right)} \\[5pt]
         \bottomrule
     \end{tabular}
+    \begin{tabular}{>{$}c<{$} | >{$}c<{$}}
+        \toprule
+            f & \dv{f}{x} \\
+        \midrule
+            \arcsin{\left( ax \right)} & \displaystyle  \frac{a}{\sqrt{1-a^2x^2}} \\[8pt]
+            \arccos{\left( ax \right)} & \displaystyle -\frac{a}{\sqrt{1-a^2x^2}} \\[8pt]
+            \arctan{\left( ax \right)} & \displaystyle  \frac{a}{1+a^2x^2} \\[8pt]
+            \arccot{\left( ax \right)} & \displaystyle -\frac{a}{1+a^2x^2} \\[8pt]
+            \arcsec{\left( ax \right)} & \displaystyle  \frac{1}{x\sqrt{a^2x^2 - 1}} \\[8pt]
+            \arccsc{\left( ax \right)} & \displaystyle -\frac{1}{x\sqrt{a^2x^2 - 1}} \\[8pt]
+        \bottomrule
+    \end{tabular}
+\end{table}
+\begin{table}[H]
+    \renewcommand*{\arraystretch}{1.5}
+    \centering
+    \hspace*{-1cm}
     \begin{tabular}{>{$}c<{$} | >{$}c<{$}}
         \toprule
             f & \dv{f}{x} \\
@@ -137,15 +150,28 @@ Let $f(x)$ be a function, and $a\in\mathbb{R}$ be a constant.
             \tanh{\left( ax \right)} &  a\sech^2{\left( ax \right)} \\
             \coth{\left( ax \right)} & -a\csch^2{\left( ax \right)} \\
             \sech{\left( ax \right)} & -a\sech{\left( ax \right)}\tan{\left( ax \right)} \\
-            \csch{\left( ax \right)} & -a\csch{\left( ax \right)}\cot{\left( ax \right)} \\
-            \arcsinh{\left( ax \right)} & \displaystyle  \frac{a}{\sqrt{1+a^2x^2}} \\
-            \arccosh{\left( ax \right)} & \displaystyle  \frac{a}{\sqrt{1-a^2x^2}} \\
-            \arctanh{\left( ax \right)} & \displaystyle  \frac{a}{1-a^2x^2} \\
-            \arccoth{\left( ax \right)} & \displaystyle  \frac{a}{1-a^2x^2} \\
-            \arcsech{\left( ax \right)} & \displaystyle -\frac{1}{a\left( 1+ax \right)\sqrt{\frac{1-ax}{1+ax}}} \\
-            \arccsch{\left( ax \right)} & \displaystyle -\frac{1}{ax^2\sqrt{1+\frac{1}{a^2x^2}}} \\
+            \csch{\left( ax \right)} & -a\csch{\left( ax \right)}\cot{\left( ax \right)} \\[5pt]
         \bottomrule
     \end{tabular}
+    \begin{tabular}{>{$}c<{$} | >{$}c<{$}}
+        \toprule
+            f & \dv{f}{x} \\
+        \midrule
+            \arcsinh{\left( ax \right)} & \displaystyle  \frac{a}{\sqrt{1+a^2x^2}} \\[8pt]
+            \arccosh{\left( ax \right)} & \displaystyle  \frac{a}{\sqrt{1-a^2x^2}} \\[8pt]
+            \arctanh{\left( ax \right)} & \displaystyle  \frac{a}{1-a^2x^2} \\[8pt]
+        \bottomrule
+    \end{tabular}
+    \begin{tabular}{>{$}c<{$} | >{$}c<{$}}
+        \toprule
+            f & \dv{f}{x} \\
+        \midrule
+            \arccoth{\left( ax \right)} & \displaystyle  \frac{a}{1-a^2x^2} \\[8pt]
+            \arcsech{\left( ax \right)} & \displaystyle -\frac{1}{a\left( 1+ax \right)\sqrt{\frac{1-ax}{1+ax}}} \\[8pt]
+            \arccsch{\left( ax \right)} & \displaystyle -\frac{1}{ax^2\sqrt{1+\frac{1}{a^2x^2}}} \\[8pt]
+        \bottomrule
+    \end{tabular}
+    \hspace*{-1cm}
     \caption{Derivatives of Elementary Functions}
 \end{table}
 \subsection{Trigonometric Identities}
@@ -160,14 +186,14 @@ Dividing by either the sine or cosine function gives:
 \end{align*}
 \subsubsection{Double-Angle Identities}
 \begin{align*}
-	\sin{\left( 2x \right)} &= 2\sin{\left( x \right)}\cos{\left( x \right)}              & \csc{\left( 2x \right)} &= \frac{\sec{\left( x \right)}\csc{\left( x \right)}}{2} \\
-	\cos{\left( 2x \right)} &= \cos^2{\left( x \right)} - \sin^2{\left( x \right)}        & \sec{\left( 2x \right)} &= \frac{\sec^2{\left( x \right)}\csc^2{\left( x \right)}}{\csc^2{\left( x \right)}-\sec^2{\left( x \right)}} \\
-	\tan{\left( 2x \right)} &= \frac{2\tan{\left( x \right)}}{1-\tan^2{\left( x \right)}} & \cot{\left( 2x \right)} &= \frac{\cot^2{\left( x \right)}-1}{2\cot{\left( x \right)}} 
+    \sin{\left( 2x \right)} &= 2\sin{\left( x \right)}\cos{\left( x \right)}              & \csc{\left( 2x \right)} &= \frac{\sec{\left( x \right)}\csc{\left( x \right)}}{2} \\[5pt]
+    \cos{\left( 2x \right)} &= \cos^2{\left( x \right)} - \sin^2{\left( x \right)}        & \sec{\left( 2x \right)} &= \frac{\sec^2{\left( x \right)}\csc^2{\left( x \right)}}{\csc^2{\left( x \right)}-\sec^2{\left( x \right)}} \\[5pt]
+	\tan{\left( 2x \right)} &= \frac{2\tan{\left( x \right)}}{1-\tan^2{\left( x \right)}} & \cot{\left( 2x \right)} &= \frac{\cot^2{\left( x \right)}-1}{2\cot{\left( x \right)}}
 \end{align*}
 \subsubsection{Power Reducing Identities}
 \begin{align*}
-	\sin^2{\left( x \right)} &= \frac{1-\cos{\left( 2x \right)}}{2}                         & \csc^2{\left( x \right)} &= \frac{2}{1-\cos{\left( 2x \right)}} \\
-	\cos^2{\left( x \right)} &= \frac{1+\cos{\left( 2x \right)}}{2}                         & \sec^2{\left( x \right)} &= \frac{2}{1+\cos{\left( 2x \right)}} \\
+    \sin^2{\left( x \right)} &= \frac{1-\cos{\left( 2x \right)}}{2}                         & \csc^2{\left( x \right)} &= \frac{2}{1-\cos{\left( 2x \right)}} \\[5pt]
+    \cos^2{\left( x \right)} &= \frac{1+\cos{\left( 2x \right)}}{2}                         & \sec^2{\left( x \right)} &= \frac{2}{1+\cos{\left( 2x \right)}} \\[5pt]
 	\tan^2{\left( x \right)} &= \frac{1-\cos{\left( 2x \right)}}{1+\cos{\left( 2x \right)}} & \cot^2{\left( x \right)} &= \frac{1+\cos{\left( 2x \right)}}{1-\cos{\left( 2x \right)}}
 \end{align*}
 \subsection{Partial Fractions}
@@ -181,10 +207,10 @@ Dividing by either the sine or cosine function gives:
         \toprule
             \textbf{Factor in denominator} & \textbf{Term in partial fraction decomposition} \\
         \midrule
-            $ax+b$ & $\displaystyle \frac{A}{ax+b}$ \\
-            $\left(ax+b\right)^k, \: k \in \mathbb{N}$ & $\displaystyle \frac{A_1}{ax+b} + \frac{A_2}{\left( ax+b \right)^2} + \cdots + \frac{A_k}{\left( ax+b \right)^k}$ \\
-            $ax^2+bx+c$ & $\displaystyle \frac{A}{ax^2+bx+c}$ \\
-            $\left(ax^2+bx+c\right)^k, \: k \in \mathbb{N}$ & $\displaystyle \frac{A_1x+B_1}{ax^2+bx+c} + \frac{A_2}{\left( ax+b \right)^2} + \cdots + \frac{A_k}{\left( ax+b \right)^k}$ \\
+            $ax+b$ & $\displaystyle \frac{A}{ax+b}$ \\[10pt]
+            $\left(ax+b\right)^k, \: k \in \mathbb{N}$ & $\displaystyle \frac{A_1}{ax+b} + \frac{A_2}{\left( ax+b \right)^2} + \cdots + \frac{A_k}{\left( ax+b \right)^k}$ \\[10pt]
+            $ax^2+bx+c$ & $\displaystyle \frac{A}{ax^2+bx+c}$ \\[10pt]
+            $\left(ax^2+bx+c\right)^k, \: k \in \mathbb{N}$ & $\displaystyle \frac{A_1x+B_1}{ax^2+bx+c} + \frac{A_2}{\left( ax+b \right)^2} + \cdots + \frac{A_k}{\left( ax+b \right)^k}$ \\[10pt]
         \bottomrule
     \end{tabular}
     \caption{Partial Fraction Forms}
@@ -215,10 +241,10 @@ Dividing by either the sine or cosine function gives:
     \centering
     \begin{tabular}{>{$}c<{$} | >{$}c<{$} >{$}c<{$} | >{$}c<{$}}
         \toprule
-        \text{\textbf{Form}} & \text{\textbf{Substitution}} & \text{\textbf{Result}} & \text{\textbf{Domain}} \\ 
+        \text{\textbf{Form}} & \text{\textbf{Substitution}} & \text{\textbf{Result}} & \text{\textbf{Domain}} \\
         \midrule
-        \left(a^2-b^2x^2\right)^n & \displaystyle x=\frac{a}{b}\sin{\left( \theta \right)} & a^2\cos^2{\left( \theta \right)} & \theta\in \left[ -\frac{\pi}{2},\: \frac{\pi}{2} \right] \\
-        \left(a^2+b^2x^2\right)^n & \displaystyle x=\frac{a}{b}\tan{\left( \theta \right)} & a^2\sec^2{\left( \theta \right)} & \theta\in \left( -\frac{\pi}{2},\: \frac{\pi}{2} \right) \\
+        \left(a^2-b^2x^2\right)^n & \displaystyle x=\frac{a}{b}\sin{\left( \theta \right)} & a^2\cos^2{\left( \theta \right)} & \theta\in \left[ -\frac{\pi}{2},\: \frac{\pi}{2} \right] \\[8pt]
+        \left(a^2+b^2x^2\right)^n & \displaystyle x=\frac{a}{b}\tan{\left( \theta \right)} & a^2\sec^2{\left( \theta \right)} & \theta\in \left( -\frac{\pi}{2},\: \frac{\pi}{2} \right) \\[8pt]
         \left(b^2x^2-a^2\right)^n & \displaystyle x=\frac{a}{b}\sec{\left( \theta \right)} & a^2\tan^2{\left( \theta \right)} & \theta\in \left[ 0,\: \frac{\pi}{2} \right) \cup \left(\frac{\pi}{2},\: \pi\right] \\
         \bottomrule
     \end{tabular}
@@ -284,11 +310,11 @@ Dividing by either the sine or cosine function gives:
 \end{theorem}
 \newpage
 \section{Definite Integrals}
-\begin{theorem} 
+\begin{theorem}
     If $f(x)$ is continuous on an interval $I:\left[ a,\:b \right]$, then the net signed area $A$ between the graph of $f(x)$ and the interval $I$ is
     \begin{equation*}
-        A = \int_a^b f(x) \dd{x} 
-    \end{equation*} 
+        A = \int_a^b f(x) \dd{x}
+    \end{equation*}
 \end{theorem}
 \begin{figure}[H]
 	\begin{mdframed}[style=exampledefault,frametitle={Properties of Definite Integrals}]
@@ -355,7 +381,7 @@ The fundamental theorem of calculus provides a logical connection between infini
     \end{equation*}
 \end{theorem}
 \begin{theorem}[Error in Approximation]
-    Let $R_n(x)$ denote the difference between $f(x)$ and its $n$th Taylor polynomial, that is 
+    Let $R_n(x)$ denote the difference between $f(x)$ and its $n$th Taylor polynomial, that is
     \begin{equation*}
         R_n(x) = f(x) - p_n(x) = f(x) - \sum_{k=0}^n \frac{f^{\left( k \right)}(x_0)}{k!} \left( x-x_0 \right)^k = \frac{f^{\left( n+1 \right)}(s)}{\left( n+1 \right)!} \left( x-x_0 \right)^{n+1}
     \end{equation*}
@@ -388,17 +414,17 @@ The fundamental theorem of calculus provides a logical connection between infini
     \begin{equation*}
         f(x) = \sum_{n=0}^{\infty} \frac{f^{\left( n \right)}(x_0)}{n!} \left( x-x_0 \right)^n
     \end{equation*}
-    holds at a point $x$ iff 
+    holds at a point $x$ iff
     \begin{align*}
         \lim_{n\to\infty} \left[ f(x) - \sum_{n=0}^{\infty} \frac{f^{\left( n \right)}(x_0)}{n!} \left( x-x_0 \right)^n \right] &= 0 \\
         \lim_{n\to\infty} R_n(x) &= 0
     \end{align*}
 \end{theorem}
 \begin{definition}[Interval of Convergence]
-    The interval of convergence for a power series is the set of $x$ values for which that series converges. 
+    The interval of convergence for a power series is the set of $x$ values for which that series converges.
 \end{definition}
 \begin{definition}[Radius of Convergence]
-    The radius of convergence $R$ is a nonnegative real number or $\infty$ such that 
+    The radius of convergence $R$ is a nonnegative real number or $\infty$ such that
     a power series converges if
     \begin{equation*}
         \abs{x - a} < R
@@ -439,10 +465,10 @@ For any power series of the form $\displaystyle\sum_{i=i_0}^\infty a_i$.
         \toprule
         \textbf{Function} & \textbf{Series} & \textbf{Interval of Convergence} \\
         \midrule
-        $\e^{x}$ & $\displaystyle \sum_{n=0}^{\infty} \frac{x^n}{n!}$ & $-\infty < x < \infty$ \\
-        $\sin{\left( x \right)}$ & $\sum_{n=0}^{\infty} \frac{\left( -1 \right)^n}{\left( 2n+1 \right)!} x^{2n+1}$ & $-\infty < x < \infty$ \\
-        $\cos{\left( x \right)}$ & $\sum_{n=0}^{\infty} \frac{\left( -1 \right)^n}{\left( 2n \right)!} x^{2n}$ & $-\infty < x < \infty$ \\
-        $\frac{1}{1-x}$ & $\sum_{n=0}^{\infty} x^n$ & $-1 < x < 1$ \\
+        $\e^{x}$ & $\displaystyle \sum_{n=0}^{\infty} \frac{x^n}{n!}$ & $-\infty < x < \infty$ \\[14pt]
+        $\sin{\left( x \right)}$ & $\displaystyle \sum_{n=0}^{\infty} \frac{\left( -1 \right)^n}{\left( 2n+1 \right)!} x^{2n+1}$ & $-\infty < x < \infty$ \\[14pt]
+        $\cos{\left( x \right)}$ & $\displaystyle \sum_{n=0}^{\infty} \frac{\left( -1 \right)^n}{\left( 2n \right)!} x^{2n}$ & $-\infty < x < \infty$ \\[14pt]
+        $\frac{1}{1-x}$ & $\displaystyle \sum_{n=0}^{\infty} x^n$ & $-1 < x < 1$ \\
         \bottomrule
     \end{tabular}
     \caption{Maclaurin Series of Common Functions}
@@ -468,7 +494,7 @@ The level curves of a function can be determined by substituting $z=c$, and solv
 \subsection{Limits and Continuity}
 \begin{definition}[Finite Limit of Multivariable Functions using the $\varepsilon$-$\delta$ Definition]
     \begin{align*}
-		&\lim_{(x_1,\: \ldots,\: x_n)\to (c_1,\: \ldots,\: c_n)} f(x_1,\: \ldots,\: x_n) = L \\ 
+		&\lim_{(x_1,\: \ldots,\: x_n)\to (c_1,\: \ldots,\: c_n)} f(x_1,\: \ldots,\: x_n) = L \\
         &\iff\forall\varepsilon>0: \exists\delta>0: \forall (x_1,\: \ldots,\: x_n) \in I: \\
         &0<\abs{x_1-c_1,\: \ldots,\: x_n-c_n}<\delta \implies \abs{f(x_1,\: \ldots,\: x_n)-L}<\varepsilon
 	\end{align*}
