Fix double and triple integrals formatting

--- a/MXB105 Lecture Notes.tex
+++ b/MXB105 Lecture Notes.tex
@@ -277,17 +277,17 @@ Dividing by either the sine or cosine function gives:
 \begin{theorem}[Continuity over an Interval]
     $f(x)$ is continuous on $I$ if $f(x)$ is continuous for all $x\in I$.
 \begin{itemize}
-    \item $f(x)$ is continuous on $I:\left( a,\:b \right)$ if it is continuous 
+    \item $f(x)$ is continuous on $I:\left( a,\:b \right)$ if it is continuous
         for all $x\in I$.
-    \item $f(x)$ is continuous on $I:\left[ a,\:b \right]$ if it is continuous 
+    \item $f(x)$ is continuous on $I:\left[ a,\:b \right]$ if it is continuous
         for all $x\in I$, but only right continuous at $a$ and left continuous at $b$.
 \end{itemize}
-    If $f(x)$  is continuous on $\left(-\infty,\:\infty\right)$, $f(x)$ is 
+    If $f(x)$  is continuous on $\left(-\infty,\:\infty\right)$, $f(x)$ is
     continuous everywhere.
 \end{theorem}
 \begin{theorem}[Intermediate Value Theorem]
     If $f(x)$ is continuous on $I:\left[ a, \: b \right]$ and $c$ is any number
-    between $f(a)$ and $f(b)$, inclusive, then there exists an $x\in I$ such 
+    between $f(a)$ and $f(b)$, inclusive, then there exists an $x\in I$ such
     that $f(x)=c$.
 \end{theorem}
 \subsection{Differentiability}
@@ -302,14 +302,14 @@ Dividing by either the sine or cosine function gives:
     \end{equation*}
 \end{theorem}
 \begin{theorem}
-    $f(x)$ is differentiable on $I$ if $f(x)$ is differentiable for all 
+    $f(x)$ is differentiable on $I$ if $f(x)$ is differentiable for all
     $x_0\in I$.
 \end{theorem}
 \begin{theorem}
     Differentiability implies continuity.
 \end{theorem}
 \begin{theorem}[Mean Value Theorem]
-    If $f(x)$ is continuous on $I:\left[ a,\:b \right]$ and differentiable on 
+    If $f(x)$ is continuous on $I:\left[ a,\:b \right]$ and differentiable on
     $I$, then there exists a point $c\in I$ such that
     \begin{equation*}
         \left.\dv{f}{x}\right|_{x=c}=\frac{f(b)-f(a)}{b-a}
@@ -318,7 +318,7 @@ Dividing by either the sine or cosine function gives:
 \newpage
 \section{Definite Integrals}
 \begin{theorem}
-    If $f(x)$ is continuous on an interval $I:\left[ a,\:b \right]$, then the 
+    If $f(x)$ is continuous on an interval $I:\left[ a,\:b \right]$, then the
     net signed area $A$ between the graph of $f(x)$ and the interval $I$ is
     \begin{equation*}
         A = \int_a^b f(x) \dd{x}
@@ -327,7 +327,7 @@ Dividing by either the sine or cosine function gives:
 \begin{figure}[H]
 	\begin{mdframed}[style=exampledefault,frametitle={Properties of Definite Integrals}]
 		\begin{theorem}
-			Suppose that $f(x)$ and $g(x)$ are continuous on the interval $I$, 
+			Suppose that $f(x)$ and $g(x)$ are continuous on the interval $I$,
             with $a,\:b,\:c\in I$ and $k\in\mathbb{R}$ then
 			\begin{enumerate}[label=\normalfont\alph*)]
 				\item $\displaystyle\int_a^a f(x) \dd{x} = 0$.
@@ -341,24 +341,24 @@ Dividing by either the sine or cosine function gives:
 \end{figure}
 \subsection{Riemann Sums}
 \begin{theorem}
-    Let $A$ be the area under $f(x)$ on the interval $\left[ a,\:b \right]$, 
+    Let $A$ be the area under $f(x)$ on the interval $\left[ a,\:b \right]$,
     then
     \begin{equation*}
         \int_a^b f(x) \dd{x} = \lim_{\max{\Delta x_k}\to 0} \sum_{k=1}^n f(x_k) \Delta x_k
     \end{equation*}
-    where $n$ is the number of rectangles, $x_k$ is the centre of the rectangle 
-    $k$, and $\Delta x_k$ is the width of the rectangle $k$. If every rectangle 
+    where $n$ is the number of rectangles, $x_k$ is the centre of the rectangle
+    $k$, and $\Delta x_k$ is the width of the rectangle $k$. If every rectangle
     has the same width, then
     \begin{equation*}
         \forall k:\Delta x_k = \frac{b-a}{n}
     \end{equation*}
 \end{theorem}
 \subsection{Fundamental Theorem of Calculus}
-The fundamental theorem of calculus provides a logical connection between 
-infinite series (definite integrals) and antiderivatives 
+The fundamental theorem of calculus provides a logical connection between
+infinite series (definite integrals) and antiderivatives
 (indefinite integrals).
 \begin{theorem}[The Fundamental Theorem of Calculus: Part 1]
-    If $f(x)$ is continuous on $\left[ a,\:b \right]$ and $F$ is any 
+    If $f(x)$ is continuous on $\left[ a,\:b \right]$ and $F$ is any
     antiderivative of $f$ on $\left[ a,\:b \right]$ then
     \begin{equation*}
         \int_a^b f(x)\dd{x} = F(b) - F(a)
@@ -369,7 +369,7 @@ infinite series (definite integrals) and antiderivatives
     \end{equation*}
 \end{theorem}
 \begin{theorem}[The Fundamental Theorem of Calculus: Part 2]
-    If $f(x)$ is continuous on $I$ then it has an antiderivative on $I$. In 
+    If $f(x)$ is continuous on $I$ then it has an antiderivative on $I$. In
     particular, if $a\in I$, then the function $F$ defined by
     \begin{equation*}
         F(x) = \int_a^x f(t)\dd{t}
@@ -385,21 +385,21 @@ infinite series (definite integrals) and antiderivatives
 \newpage
 \subsection{Taylor and Maclaurin Polynomials}
 \begin{theorem}[Taylor Polynomials]
-    If $f(x)$ is a $n$ differentiable function at $x_0$, then the $n$th degree 
+    If $f(x)$ is a $n$ differentiable function at $x_0$, then the $n$th degree
     Taylor polynomial for $f(x)$ near $x_0$, is given by
     \begin{equation*}
         f(x) \approx p_n(x) = \sum_{k=0}^n \frac{f^{\left( k \right)}(x_0)}{k!} \left( x-x_0 \right)^k
     \end{equation*}
 \end{theorem}
 \begin{theorem}[Maclaurin Polynomials]
-    Evaluating a Taylor polynomial near $0$, gives the $n$th degree Maclaurin 
+    Evaluating a Taylor polynomial near $0$, gives the $n$th degree Maclaurin
     polynomial for $f(x)$
     \begin{equation*}
         f(x) \approx p_n(x) = \sum_{k=0}^n \frac{f^{\left( k \right)}(0)}{k!} x^k
     \end{equation*}
 \end{theorem}
 \begin{theorem}[Error in Approximation]
-    Let $R_n(x)$ denote the difference between $f(x)$ and its $n$th Taylor 
+    Let $R_n(x)$ denote the difference between $f(x)$ and its $n$th Taylor
     polynomial, that is
     \begin{equation*}
         R_n(x) = f(x) - p_n(x) = f(x) - \sum_{k=0}^n \frac{f^{\left( k \right)}(x_0)}{k!} \left( x-x_0 \right)^k = \frac{f^{\left( n+1 \right)}(s)}{\left( n+1 \right)!} \left( x-x_0 \right)^{n+1}
@@ -410,21 +410,21 @@ infinite series (definite integrals) and antiderivatives
 \section{Taylor and Maclaurin Series}
 \subsection{Infinite Series}
 \begin{definition}[Taylor Series]
-    If $f(x)$  has derivatives of all orders at $x_0$, then the Taylor series 
+    If $f(x)$  has derivatives of all orders at $x_0$, then the Taylor series
     for $f(x)$ about $x=x_0$ is given by
     \begin{equation*}
         f(x) = \sum_{n=0}^{\infty} \frac{f^{\left( n \right)}(x_0)}{n!}\left( x-x_0 \right)^n
     \end{equation*}
 \end{definition}
 \begin{definition}[Maclaurin Series]
-    If a Taylor series is centred on $x_0=0$, it is called a Maclaurin series, 
+    If a Taylor series is centred on $x_0=0$, it is called a Maclaurin series,
     defined by
     \begin{equation*}
         f(x) = \sum_{n=0}^{\infty} \frac{f^{\left( n \right)}(0)}{n!} x^n
     \end{equation*}
 \end{definition}
 \begin{definition}[Power Series]
-    Both Taylor and Maclaurin series are examples of \textbf{power series}, 
+    Both Taylor and Maclaurin series are examples of \textbf{power series},
     which are defined as follows
     \begin{equation*}
         \sum_{n=0}^{\infty} c_n\left( x-x_0 \right)^n
@@ -443,11 +443,11 @@ infinite series (definite integrals) and antiderivatives
     \end{align*}
 \end{theorem}
 \begin{definition}[Interval of Convergence]
-    The interval of convergence for a power series is the set of $x$ values for 
+    The interval of convergence for a power series is the set of $x$ values for
     which that series converges.
 \end{definition}
 \begin{definition}[Radius of Convergence]
-    The radius of convergence $R$ is a nonnegative real number or $\infty$ such 
+    The radius of convergence $R$ is a nonnegative real number or $\infty$ such
     that
     a power series converges if
     \begin{equation*}
@@ -457,14 +457,14 @@ infinite series (definite integrals) and antiderivatives
     \begin{equation*}
         \abs{x - a} > R
     \end{equation*}
-    The behaviour of the power series on the boundary, that is, where 
-    $\abs{x - a} = R$, can be determined by substituting $x = R + a$ for the 
+    The behaviour of the power series on the boundary, that is, where
+    $\abs{x - a} = R$, can be determined by substituting $x = R + a$ for the
     upper boundary, and $x = -R + a$ for the lower boundary.
 \end{definition}
 \subsection{Convergence Tests}
 For any power series of the form $\displaystyle\sum_{i=i_0}^\infty a_i$.
 \begin{mdframed}[style=exampledefaultcols,frametitle={Alternating Series}]
-    \textbf{Conditions} $a_i = \left( -1 \right)^i b_i$ or 
+    \textbf{Conditions} $a_i = \left( -1 \right)^i b_i$ or
     $a_i = \left( -1 \right)^{i+1} b_i$. $b_i>0$.
     \begin{equation*}
         \text{Is $b_{i+1}\leqslant b_i$ \& $\lim_{i\to\infty}b_i=0$?}\:
@@ -482,7 +482,7 @@ For any power series of the form $\displaystyle\sum_{i=i_0}^\infty a_i$.
             \text{NO} & \text{$\sum a_i$ Diverges}
         \end{cases}
     \end{equation*}
-    The ratio test is inconclusive if 
+    The ratio test is inconclusive if
     $\displaystyle \lim_{i\to\infty}\frac{a_{i+1}}{a_i} = 1$.
 \end{mdframed}
 \subsection{Table of Maclaurin Series}
@@ -505,7 +505,7 @@ For any power series of the form $\displaystyle\sum_{i=i_0}^\infty a_i$.
 \section{Multivariable Calculus}
 \subsection{Multivariable Functions}
 \begin{definition}
-    A function is multivariable if its domain consists of several variables. In 
+    A function is multivariable if its domain consists of several variables. In
     the reals, these functions are defined
     \begin{equation*}
         f:\mathbb{R}^n\to\mathbb{R}
@@ -513,16 +513,16 @@ For any power series of the form $\displaystyle\sum_{i=i_0}^\infty a_i$.
 \end{definition}
 \subsection{Level Curves}
 \begin{definition}
-    Level curves or \textit{contour curves} of a function of two variables is a 
+    Level curves or \textit{contour curves} of a function of two variables is a
     curve along which the function has constant value.
     \begin{equation*}
         L_c\left( f \right) = \left\{ \left( x,\: y \right) : f\left(x,\: y\right) = c\right\}
     \end{equation*}
 \end{definition}
-The level curves of a function can be determined by substituting $z=c$, and 
+The level curves of a function can be determined by substituting $z=c$, and
 solving for $y$.
 \subsection{Limits and Continuity}
-\begin{definition}[Finite Limit of Multivariable Functions using the 
+\begin{definition}[Finite Limit of Multivariable Functions using the
     $\varepsilon$-$\delta$ Definition]
     \begin{align*}
 		&\lim_{(x_1,\: \ldots,\: x_n)\to (c_1,\: \ldots,\: c_n)} f(x_1,\: \ldots,\: x_n) = L \\
@@ -531,16 +531,16 @@ solving for $y$.
 	\end{align*}
 \end{definition}
 \begin{theorem}[Limits along Smooth Curves]
-    If $f(x,\: y) \to L$ as $(x,\: y) \to (x_0,\: y_0)$, then 
-    $\displaystyle \lim_{(x,\: y) \to (x_0,\: y_0)} = L$ along any smooth 
+    If $f(x,\: y) \to L$ as $(x,\: y) \to (x_0,\: y_0)$, then
+    $\displaystyle \lim_{(x,\: y) \to (x_0,\: y_0)} = L$ along any smooth
     curve.
 \end{theorem}
 \begin{theorem}[Existence of a Limit]
-    If the limit of $f(x,\: y)$ changes along different smooth curves, then 
+    If the limit of $f(x,\: y)$ changes along different smooth curves, then
     $\displaystyle \lim_{(x,\: y) \to (x_0,\: y_0)}$ does not exist.
 \end{theorem}
 \begin{theorem}[Continuity of Multivariable Functions]
-    A function $f(x_1,\: \ldots,\: x_n)$ is continuous at 
+    A function $f(x_1,\: \ldots,\: x_n)$ is continuous at
     $(c_1,\: \ldots,\: c_n)$ iff
     \begin{equation*}
         \lim_{(x_1,\: \ldots,\: x_n)\to (c_1,\: \ldots,\: c_n)} f(x_1,\: \ldots,\: x_n) = f(c_1,\: \ldots,\: c_n)
@@ -549,13 +549,13 @@ solving for $y$.
 Recognising continuous functions:
 \begin{itemize}
     \item A sum, difference or product of continuous functions is continuous.
-    \item A quotient of continuous functions is continuous expect where the 
+    \item A quotient of continuous functions is continuous expect where the
         denominator is zero.
     \item A composition of continuous functions is continuous.
 \end{itemize}
 \subsection{Partial Derivatives}
 \begin{definition}[Partial Differentiation]
-    The partial derivative of a multivariable function is its derivative with 
+    The partial derivative of a multivariable function is its derivative with
     respect to one of those variables, while the others are held constant.
     \begin{equation*}
         \pdv{f}{x_i} = \lim_{h \to 0} \frac{f(x_1,\: \ldots,\: x_{i-1},\: x_i+h,\: x_{i+1},\: \ldots,\: x_n) - f(x_1,\: \ldots,\: x_n)}{h}
@@ -563,7 +563,7 @@ Recognising continuous functions:
 \end{definition}
 \subsection{The Gradient Vector}
 \begin{definition}
-    Let $\symbf{\nabla}$, pronounced ``del'', denote the vector differential 
+    Let $\symbf{\nabla}$, pronounced ``del'', denote the vector differential
     operator defined as follows
     \begin{equation*}
         \symbf{\nabla} = \mqty[\partial_{x_1} \\ \partial_{x_2} \\ \vdots \\ \partial_{x_n}]
@@ -571,8 +571,8 @@ Recognising continuous functions:
 \end{definition}
 \subsection{Multivariable Chain Rule}
 \begin{definition}
-    Let $f=f(\symbfit{x}(t_1,\: \ldots,\: t_n))$ be the composition of $f$ with 
-    $\symbfit{x}=\mqty[x_1 & \cdots & x_m]$, then the partial derivative of $f$ 
+    Let $f=f(\symbfit{x}(t_1,\: \ldots,\: t_n))$ be the composition of $f$ with
+    $\symbfit{x}=\mqty[x_1 & \cdots & x_m]$, then the partial derivative of $f$
     with respect to $t_i$ is given by
     \begin{equation*}
         \pdv{f}{t_i} = \symbf{\nabla}f \vdot \partial_{t_i}\symbfit{x}
@@ -580,7 +580,7 @@ Recognising continuous functions:
 \end{definition}
 \subsection{Directional Derivatives}
 \begin{definition}
-    The directional derivative $\symbf{\nabla}_{\symbfit{u}}f$ is the rate at 
+    The directional derivative $\symbf{\nabla}_{\symbfit{u}}f$ is the rate at
     which the function $f$ changes in the direction $\symbfit{u}$.
     \begin{align*}
         \symbf{\nabla}_{\symbfit{u}}f &= \lim_{h \to 0} \frac{f(\symbfit{x} + h\symbfit{u}) - f(\symbfit{x})}{h} \\
@@ -616,8 +616,8 @@ Recognising continuous functions:
         &= \norm{\symbf{\nabla}f} \norm{\symbfit{u}} \cos{\left( \theta \right)} \nonumber \\
         &= \norm{\symbf{\nabla}f} \cos{\left( \theta \right)} \label{directional_derivative}
     \end{align}
-    \hyperref[directional_derivative]{Equation \ref{directional_derivative}} is 
-    maximised when $\cos{\left( \theta \right)}$ is maximised. Thus the 
+    \hyperref[directional_derivative]{Equation \ref{directional_derivative}} is
+    maximised when $\cos{\left( \theta \right)}$ is maximised. Thus the
     maximum slope is given by
     \begin{equation*}
         \max \symbf{\nabla}_{\symbfit{u}}f = \norm{\symbf{\nabla}f}
@@ -628,14 +628,14 @@ Recognising continuous functions:
     \end{equation*}
 \end{proof}
 \begin{theorem}[The Gradient is Normal to the Level Curves of $f$]
-    If $\symbf{\nabla}f = 0$, then $\symbf{\nabla}f$ is normal to the level 
+    If $\symbf{\nabla}f = 0$, then $\symbf{\nabla}f$ is normal to the level
     curves of $f$ at any point $(c_1,\: \ldots,\: c_n)$.
 \end{theorem}
 \subsection{Higher-Order Partial Derivatives}
 \begin{definition}
-    Higher-order partial derivatives can be denoted using three different 
-    notation. The following table shows the mixed partial derivative of 
-    $f(x,\: y)$ w.r.t. $x$ then $y$. 
+    Higher-order partial derivatives can be denoted using three different
+    notation. The following table shows the mixed partial derivative of
+    $f(x,\: y)$ w.r.t. $x$ then $y$.
     \begin{table}[H]
         \centering
         \begin{tabular}{c c c}
@@ -648,8 +648,8 @@ Recognising continuous functions:
         \caption{Mixed Partial Derivative Notation}
         % \label{}
     \end{table}
-    For partial derivatives w.r.t. the same variable, a superscript can be used 
-    in Euler notation. 
+    For partial derivatives w.r.t. the same variable, a superscript can be used
+    in Euler notation.
     \begin{table}[H]
         \centering
         \begin{tabular}{c c c}
@@ -665,13 +665,13 @@ Recognising continuous functions:
 \end{definition}
 \subsection{Hessian Matrix}
 \begin{definition}
-    Let the Hessian matrix $\symbf{H}$ be the matrix of second-order partial 
+    Let the Hessian matrix $\symbf{H}$ be the matrix of second-order partial
     derivative operators defined as shown below
     \begin{equation*}
-        \symbf{H} = 
+        \symbf{H} =
         \mqty[
-            \partial^2_{x_1} & \cdots & \partial_{x_nx_1} \\ 
-            \vdots & \ddots & \vdots \\ 
+            \partial^2_{x_1} & \cdots & \partial_{x_nx_1} \\
+            \vdots & \ddots & \vdots \\
             \partial_{x_1x_n} & \cdots & \partial^2_{x_n}
         ]
     \end{equation*}
@@ -681,26 +681,31 @@ Recognising continuous functions:
 \section{Double and Triple Integrals}
 \subsection{Double Integrals}
 \begin{theorem}
-    Divide the rectangular region of $R$ into $n$ rectangles with sides 
+    Divide the rectangular region of $R$ into $n$ rectangles with sides
     parallel to the coordinate axes.
     Discard rectangles which contain any points outside of $R$.
     Choose an arbitrary point in each remaining rectangle.
     The area of the $k$th remaining rectangle is $\Delta A_k$.
-    The arbitrary point in the $k$th remaining rectangle is $({x_k}^\ast, {y_k}^\ast)$.
+    The arbitrary point in the $k$th remaining rectangle is
+    $({x_k}^\ast,\: {y_k}^\ast)$.
     The Riemann sum is
     \begin{equation*}
-        \iint\limits_{R} f(x, y)  \dd{A} = \sum_{k=1}^{\infty} f({x_k}^\ast, {y_k}^\ast) \Delta{}A_k
+        \iint\limits_{R} f(x,\: y)  \dd{A}
+        = \sum_{k=1}^{\infty} f({x_k}^\ast,\: {y_k}^\ast) \Delta{}A_k
     \end{equation*}
 \end{theorem}
 \begin{figure}[H]
 	\begin{mdframed}[style=exampledefault,frametitle={Properties of Double Integrals}]
 		\begin{theorem}
-            Suppose that $f(x, y) $ and $g(x, y)$ are continuous on $R$
+            Suppose that $f(x,\: y) $ and $g(x,\: y)$ are continuous on $R$
             and $R$ can be subdivided into $R_1$ and $R_2$then
 			\begin{enumerate}[label=\normalfont\alph*)]
-				\item $\displaystyle\iint\limits_R kf(x, y) \dd{A} = k\iint\limits_R f(x, y) \dd{A}$.
-				\item $\displaystyle\iint\limits_R \bigl(f(x, y) \pm g(x, y)\bigr) \dd{A} = \iint\limits_R f(x, y) \dd{A} \pm \iint\limits_R g(x, y) \dd{A}$.
-                \item $\displaystyle\iint\limits_R f(x, y) \dd{A} = \iint\limits_{R_1} f(x, y) \dd{A} + \iint\limits_{R_2} f(x, y) \dd{A}$.
+				\item $\displaystyle\iint\limits_R kf(x,\: y) \dd{A}
+                    = k\iint\limits_R f(x,\: y) \dd{A}$.
+				\item $\displaystyle\iint\limits_R \bigl(f(x,\: y) + g(x,\: y)\bigr) \dd{A}
+                    = \iint\limits_R f(x,\: y) \dd{A} + \iint\limits_R g(x,\: y) \dd{A}$.
+                \item $\displaystyle\iint\limits_R f(x,\: y) \dd{A}
+                    = \iint\limits_{R_1} f(x,\: y) \dd{A} + \iint\limits_{R_2} f(x,\: y) \dd{A}$.
 			\end{enumerate}
 		\end{theorem}
 	\end{mdframed}
@@ -715,21 +720,26 @@ Recognising continuous functions:
     Discard boxes which contain any points outside of $G$.
     Choose an arbitrary point in each remaining box.
     The volume of the $k$th remaining box is $\Delta V_k$.
-    The arbitrary point in the $k$th remaining box is $({x_k}^\ast, {y_k}^\ast, {z_k}^\ast)$.
+    The arbitrary point in the $k$th remaining box is
+    $({x_k}^\ast,\: {y_k}^\ast,\: {z_k}^\ast)$.
     The Riemann sum is
     \begin{equation*}
-        \iiint\limits_{G} f(x, y, z)  \dd{V} = \sum_{k=1}^{\infty} f({x_k}^\ast, {y_k}^\ast, {z_k}^\ast) \Delta{}V_k
+        \iiint\limits_{G} f(x,\: y,\: z)  \dd{V}
+        = \sum_{k=1}^{\infty} f({x_k}^\ast,\: {y_k}^\ast,\: {z_k}^\ast) \Delta{}V_k
     \end{equation*}
 \end{theorem}
 \begin{figure}[H]
 	\begin{mdframed}[style=exampledefault,frametitle={Properties of Triple Integrals}]
 		\begin{theorem}
-            Suppose that $f(x, y, z) $ and $g(x, y, z)$ are continuous on $G$
+            Suppose that $f(x,\: y,\: z) $ and $g(x,\: y,\: z)$ are continuous on $G$
             and $G$ can be subdivided into $G_1$ and $G_2$then
 			\begin{enumerate}[label=\normalfont\alph*)]
-				\item $\displaystyle\iiint\limits_G kf(x, y, z) \dd{V} = k\iiint\limits_G f(x, y, z) \dd{V}$.
-				\item $\displaystyle\iiint\limits_G \bigl(f(x, y, z) \pm g(x, y, z)\bigr) \dd{V} = \iiint\limits_G f(x, y, z) \dd{V} \pm \iiint\limits_G g(x, y, z) \dd{V}$.
-                \item $\displaystyle\iiint\limits_G f(x, y, z) \dd{V} = \iiint\limits_{G_1} f(x, y, z) \dd{V} + \iiint\limits_{G_2} f(x, y, z) \dd{V}$.
+				\item $\displaystyle\iiint\limits_G kf(x,\: y,\: z) \dd{V}
+                    = k\iiint\limits_G f(x,\: y,\: z) \dd{V}$.
+				\item $\displaystyle\iiint\limits_G \bigl(f(x,\: y,\: z) + g(x,\: y,\: z)\bigr) \dd{V}
+                    = \iiint\limits_G f(x,\: y,\: z) \dd{V} + \iiint\limits_G g(x,\: y,\: z) \dd{V}$.
+                \item $\displaystyle\iiint\limits_G f(x,\: y,\: z) \dd{V}
+                    = \iiint\limits_{G_1} f(x,\: y,\: z) \dd{V} + \iiint\limits_{G_2} f(x,\: y,\: z) \dd{V}$.
 			\end{enumerate}
 		\end{theorem}
 	\end{mdframed}
