--- a/template.sty
+++ b/template.sty
@@ -6,7 +6,7 @@
 \usepackage{cancel} % Draw diagonal lines and arrows in math equations
 \usepackage{mathtools} % Starred versions of amsmath matrix environments; Multiline, cases, gathered environment
 
-%% Sybmols 
+%% Sybmols
 
 \usepackage{amssymb} % Extended symbol collection - also loads amsfonts
 
@@ -14,7 +14,7 @@
 
 \usepackage{mathrsfs}
 
-%% Environments 
+%% Environments
 
 \usepackage{amsthm} % Use theorems
 
@@ -46,12 +46,12 @@
 
 %% Graphics
 
-\usepackage{graphicx} % Extension to graphics 
+\usepackage{graphicx} % Extension to graphics
 \graphicspath{ {./figures/} }
 
 %% Miscellaneous
 
-\usepackage{listings} % Typeset programming code 
+\usepackage{listings} % Typeset programming code
 \usepackage{siunitx} % SI units package
 \usepackage{physics} % Vectors/derivatives/operators
 % \usepackage[dvipsnames]{xcolor} % Extension to color package
@@ -67,7 +67,7 @@
 \setmathfont{TeX Gyre Pagella Math}[range={bb,bbit}, Scale=MatchUppercase]
 \setmathfont[range={\mathcal,\mathbfcal},StylisticSet=1]{XITS Math}
 
-%%% Preamble 
+%%% Preamble
 
 %% Misc Commands
 
@@ -115,6 +115,8 @@
 \newcommand{\rowspace}[1]{\func{\mathcal{C}}{\symbfit{#1}^{\top}}}
 \newcommand{\nullspace}[1]{\func{\mathcal{N}}{\symbfit{#1}}}
 \newcommand{\leftnullspace}[1]{\func{\mathcal{N}}{\symbfit{#1}^{\top}}}
+
+\newcommand{\avec}[1]{\langle{}\: {#1} \:\rangle{}}
 
 %% Laplace Transform
 
